oceanmap versions

oceanmap_0.0.6 April 28, 2017 (Robert Bauer)
        - now allowing plotmap()-calls without terrain (fixing error in map.poly(): nothing to draw: all regions out of bounds)

oceanmap_0.0.5 April 11, 2017 (Robert Bauer)
        - fixing minor bugs in plotmap()

oceanmap_0.0.4 March 15, 2017 (Robert Bauer)
	- setting the default projection of map() in plotmap() and v() calls
        - fixing minor bugs in plotmap() and v()

oceanmap_0.0.3 March 8, 2017 (Robert Bauer)
	- loadfonts() set quiet in figure() calls
        - update on NOAA server in get.bathy() calls

oceanmap_0.0.2 -- Sept 15, 2016 (Robert Bauer)
	- update plotmap(), v.plot(), v.raster() and set.colorbar()
        - update cmap and added cmap_topo